--- a/WhatWhen/WhatWhen.Windows/WhatWhen.Windows.csproj
+++ b/WhatWhen/WhatWhen.Windows/WhatWhen.Windows.csproj
@@ -106,6 +106,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activity.cs" />
     <Compile Include="AddPage.xaml.cs">
       <DependentUpon>AddPage.xaml</DependentUpon>
     </Compile>
